--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,13 @@
 name: metacoag
 channels:
+  - conda-forge
   - bioconda
-  - defaults
 dependencies:
-  - python>=3.7.1
-  - biopython>=1.72
-  - python-igraph>=0.7.1
-  - tqdm
-  - networkx>=2.4
-  - scipy>=1.3.1
-  - numpy>=1.17.2
-  - tabulate
+  - python=3.7.4
+  - biopython=1.74
+  - python-igraph=0.7.1
+  - networkx=2.4
+  - scipy=1.3.1
+  - numpy=1.17.2
+  - tqdm=4.36.1
+  - tabulate=0.8.7
