--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,8 @@ dependencies:
   - python=3.7.4
   - biopython=1.74
   - python-igraph=0.9.6
+  - fraggenescan=1.31
+  - hmmer=3.3.2
   - networkx=2.4
   - scipy=1.3.1
   - numpy=1.17.2
