--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -36,3 +36,9 @@ jobs:
         run: |
           pip install pytest pytest-cov
           pytest --cov=./ --cov-report=xml --cov-append
+          
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          file: coverage.xml
+          fail_ci_if_error: true
