--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-biopython==1.74
-python-igraph==0.9.6
-networkx==2.4
-scipy==1.3.1
-numpy==1.17.2
-tqdm==4.36.1
+biopython
+python-igraph
+networkx
+scipy
+numpy
+tqdm
