--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - python=3.8
+  - python>=3.7
   - biopython
   - python-igraph
   - fraggenescan
