--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,8 +14,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        os: [macos-12, ubuntu-latest]
+        python-version: ["3.8", "3.9", "3.10"]
 
     steps:
       - uses: "actions/checkout@v3"
