--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -35,7 +35,7 @@ jobs:
       - name: "Generate coverage report on ${{ matrix.os }} for Python ${{ matrix.python-version }}"
         run: |
           pip install pytest pytest-cov
-          pytest --cov=./ --cov-report=xml --cov-append
+          pytest --cov=./ --cov-report xml --cov-report lcov --cov-append
           
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@master
